--- a/index.html
+++ b/index.html
@@ -1,1 +1,196 @@
+<!DOCTYPE html>
+<html lang="ja">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mokuraはもぐら？</title>
+    <!-- ress -->
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="ingredients/Mokurafont-Regular.ttf">
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body id="top">
+    <header class="header">
+        <div class="headwrapper fixedtop">
+            <h1>MOMOKA ha MOGURA?!</h1>
+            <nav id="topnav">
+                <ul class="topnav">
+                    <li><a href="#myworks">My works</a></li>
+                    <li><a href="#aboutme">About me</a></li>
+                    <li><a href="#contact">contact</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="flex wrapper toptea">
+            <div class="toptea-headmes">
+                <p>
+                    田原萌々香のポートフォリオサイトです。<br>
+                    お忙しい中、ご覧頂きありがとうございます。<br>
+                    すこしでもゆっくりなさってくださいね！<br>
+                </p>
+            </div>
+            <img src="images/teasuggestion.png" class="toptea-sug" height="200px" width="auto">
+        </div>
+    </header>
+    <main data-scroll-container id="myworks">
+        <div class="scroll side-scroll">
+            <h2>作品紹介</h2>
+            <div class="side-scroll-list-wrapper">
+                <ul id="Works" class="side-scroll-list">
+                    <li class="side-scroll-item">
+                        <figure>
+                            <a href="">
+                                <img src="images/Firstwork.png" alt="田原萌々香の自己紹介" class="show-pic">
+                            </a>
+                            <figcaption>自己紹介サイト（一か月目）</figcaption>
+                        </figure>
+                        <p class="keyword">HTML,CSS,Design</p>
+                        <a href=""><button class="dig">Dig more!</button></a>
+                    </li>
+                    <li class="side-scroll-item">
+                        <figure>
+                            <a href="">
+                                <img src="images/WEBworks vine.png" alt="" class="show-pic">
+                            </a>
+                            <figcaption>ワイナリーのサイト</figcaption>
+                        </figure>
+                        <p class="keyword">HTML,CSS</p>
+                        <a href=""><button class="dig">Dig more!</button></a>
+                    </li>
+                    <li class="side-scroll-item">
+                        <figure>
+                            <a href="">
+                                <img src="images/Artmuseum.png" alt="" class="show-pic">
+                            </a>
+                            <figcaption>美術館のサイト</figcaption>
+                        </figure>
+                        <p class="keyword">HTML,CSS,Design</p>
+                        <a href=""><button class="dig">Dig more!</button></a>
+                    </li>
+                    <li class="side-scroll-item">
+                        <figure>
+                            <a href="">
+                                <img src="images/SPREYOMOTE.jpg" alt="" class="show-pic">
+                            </a>
+                            <figcaption>除菌スプレーラベル</figcaption>
+                        </figure>
+                        <p class="keyword"></p>
+                        <a href=""><button class="dig">Dig more!</button></a>
+                    </li>
+                    <li class="side-scroll-item">
+                        <figure>
+                            <a href="">
+                                <img src="images/Kashiwa.png" alt="" class="show-pic">
+                            </a>
+                            <figcaption>架空高級温泉旅館のサイトカンプ</figcaption>
+                        </figure>
+                        <p class="keyword">Design,Photoshop</p>
+                        <a href=""><button class="dig">Dig more!</button></a>
+                    </li>
+                    <li class="side-scroll-item">
+                        <figure>
+                            <a href="">
+                                <img src="images/Spreyura.jpg" alt="" class="show-pic">
+                            </a>
+                            <figcaption>除菌スプレーの裏面</figcaption>
+                        </figure>
+                        <p class="keyword"></p>
+                        <a href=""><button class="dig">Dig more!</button></a>
+                    </li>
+                    <li class="side-scroll-item">
+                        <figure>
+                            <a href="">
+                                <img src="images/hangingoutmoon.png" alt="" class="show-pic">
+                            </a>
+                            <figcaption>夢のなかなら</figcaption>
+                        </figure>
+                        <p class="keyword"></p>
+                        <a href=""><button class="dig">Dig more!</button></a>
+                    </li>
+                    <li class="side-scroll-item">
+                        <figure>
+                            <a href="">
+                                <img src="images/teruani.png" alt="" class="show-pic">
+                            </a>
+                            <figcaption>オリジナルキャラクター「てるくん」のアニメーション</figcaption>
+                        </figure>
+                        <p class="keyword"></p>
+                        <a href=""><button class="dig">Dig more!</button></a>
+                    </li>
+                    <li class="side-scroll-item">
+                        <figure>
+                            <a href="">
+                                <img src="images/mokura-1.png" alt="" class="show-pic">
+                            </a>
+                            <figcaption></figcaption>
+                        </figure>
+                        <p class="keyword"></p>
+                        <a href=""><button class="dig">Dig more!</button></a>
+                    </li>
+                    <li class="side-scroll-item">
+                        <figure>
+                            <a href="">
+                                <img src="images/Lettea.png" alt="" class="show-pic">
+                            </a>
+                            <figcaption>授業内で作成した架空のCM</figcaption>
+                        </figure>
+                        <p class="keyword">CM,PowerPoint,logo</p>
+                        <a href=""><button class="dig">Dig more!</button></a>
+                    </li>
+                    <li class="side-scroll-item">
+                        <figure>
+                            <a href="">
+                                <img src="images/PowerPoint.png" alt="" class="show-pic">
+                            </a>
+                            <figcaption>20人の前で発表しました。</figcaption>
+                        </figure>
+                        <p class="keyword">PowerPoint,Presentation</p>
+                        <a href=""><button class="dig">Dig more!</button></a>
+                    </li>
+                    <li class="side-scroll-item">
+                        <figure>
+                            <a href="">
+                                <img src="images/akashia.png" alt="" class="show-pic">
+                            </a>
+                            <figcaption>STUDIOを使用してサイト制作、CMS化</figcaption>
+                        </figure>
+                        <p class="keyword">co-production,STUDIO</p>
+                        <a href=""><button class="dig">Dig more!</button></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="otame">
+        </div>
+    </main>
+    <main id="aboutme">
+        <div class="intro wrapper">
+            <h2>自己紹介</h2>
+            <h3>My story</h3>
+            <h3>Hobbies</h3>
+            <h3>Skills</h3>
+            <h3>favorites</h3>
+        </div>
+    </main>
+    <div id="contact">
+        <div class="wrapper">
+            <contact id="form"></contact>
+        </div>
+    </div>
+    <footer class="footer">
+        <div class="wrapper"></div>
+    </footer>
+
+
+    <!-- script -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <script src="js/script.js"></script>
+    <!-- script -->
+
+</body>
+
+</html>
